<resources>
    <string name="app_name">Foot Patrolling</string>

    <string name="crash_toast_text">Oops Crashe Occurred</string>

    <string name="text_please_wait">Please wait...</string>
    <string name="text_authenticating">Authenticating...</string>
    <string name="text_alert">Alert</string>

    <string name="text_checklist">Check List</string>
    <string name="text_home">Home</string>
    <string name="text_observations">Observations</string>
    <string name="text_datasync">Data Sync</string>
    <string name="text_compliance">Compliance</string>
    <string name="text_reports">Reports and Status</string>
    <string name="text_schedule">Schedule Entry</string>
    <string name="text_reload">Reload</string>
    <string name="text_login">Login</string>
    <string name="text_dbstatus">Local DB Status</string>
    <string name="text_terms">Terms of Use</string>
    <string name="text_logout">Logout</string>
    <string name="text_exit">Exit</string>
    <string name="text_register">Register</string>
    <string name="text_signin">Sign In</string>
    <string name="text_apply">Apply</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_back">Back</string>
    <string name="text_stop">Stop</string>
    <string name="text_submit">Submit</string>
    <string name="text_runreport">Run Report</string>
    <string name="text_reset">Reset</string>
    <string name="text_sync_now">Sync Now</string>
    <string name="text_startFP">Start FP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="empty_check_list_message">Check list was empty</string>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
