<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:title="@string/text_login" />
        <item
            android:id="@+id/nav_checklist"
            android:title="@string/text_checklist" />
        <item
            android:id="@+id/nav_observations"
            android:title="@string/text_observations" />
        <item
            android:id="@+id/nav_data"
            android:title="@string/text_datasync" />
        <item
            android:id="@+id/nav_compliance"
            android:title="@string/text_compliance" />
        <item
            android:id="@+id/nav_reports"
            android:title="@string/text_reports" />
        <item
            android:id="@+id/nav_reload"
            android:title="@string/text_reload" />
        <item
            android:id="@+id/nav_local_db_status"
            android:title="@string/text_dbstatus" />
        <item
            android:id="@+id/nav_terms"
            android:title="@string/text_terms" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/text_logout" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/text_exit" />
    </group>

</menu>
